<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 NetVersa LLC
-->
<resources>
    <string name="app_name">BTC Price</string>

    <string name="mtgox">Mt. Gox</string>

    <string name="fetch_error_generic">update failed</string>
    <string name="fetch_error_bad_target_format" formatted="false">invalid target \'%s\'</string>
    <string name="fetch_error_wrong_arity_format" formatted="false">action \'%s\' requires %d arguments</string>
    <string name="fetch_error_unknown_action_format" formatted="false">unknown action \'%s\'</string>
    <string name="fetch_error_unknown_exchange_format" formatted="false">unknown exchange \'%s\'</string>
    <string name="fetch_error_timed_out">took too long</string>
    <string name="fetch_error_invalid_argument_format" formatted="false">value \'%s\' of \'%s\' is invalid</string>

    <string name="menu_refresh">refresh</string>

    <string name="price_dummy">--.--</string>
    <string name="price_format" formatted="false">%.2f</string>
    <string name="price_terse_dummy">--</string>
    <string name="price_terse_format" formatted="false">%.0f</string>
    <string name="currency_pair_dummy">--/--</string>
    <string name="currency_pair_format" formatted="false">%s/%s</string>
    <string name="high_price_dummy">▲ --.--</string>
    <string name="high_price_format" formatted="false">▲ %.2f</string>
    <string name="low_price_dummy">▼ --.--</string>
    <string name="low_price_format" formatted="false">▼ %.2f</string>
    <string name="volume_dummy">Volume: ---</string>
    <string name="volume_format" formatted="false">Volume: %.0f</string>
    <string name="as_of_format" formatted="false">as of %s</string>

    <string name="ongoing_price_format" formatted="false">%.2f %s</string>
    <string name="ongoing_currency_format" formatted="false">%s %s</string>

    <string name="change_price_format" formatted="false">%+.2f(%d%%) %.2f %s</string>
    <string name="change_currency_format" formatted="false">%s %s</string>

    <string name="notification_config_title">Notifications</string>
    <string name="notification_config_menu">notifications</string>

    <!-- notification config prefs -->
    <string name="pref_ongoing_price_category">Ongoing Price Monitor</string>
    <string name="pref_ongoing_price_title">Always show current price</string>
    <string name="pref_ongoing_price_summary">Show the price as a notification all the time</string>
    <string name="pref_price_change_category">Price Change Monitor</string>
    <string name="pref_price_change_title">Notify when prices change</string>
</resources>
