<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 NetVersa LLC
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/root_scrollview"
    >
    <LinearLayout style="@style/root_linearlayout">
        <TextView
            style="@style/headline_price"
            android:text="@string/price_dummy"
            />
        <TextView
            style="@style/headline_currency"
            android:layout_marginTop="-16dp"
            android:text="@string/currency_pair_dummy"
            />
        <View style="@style/horizontal_separator"/>
        <TextView
            style="@style/high_price"
            android:text="@string/high_price_dummy"
            />
        <TextView
            style="@style/low_price"
            android:layout_marginTop="-12dp"
            android:text="@string/low_price_dummy"
            />
        <TextView
            style="@style/volume"
            android:text="@string/volume_dummy"
            />
        <com.netversa.btcprice.CandlestickChartView
            style="@style/candlestick_single"
            />
    </LinearLayout>
</ScrollView>
